add docker files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /StudentServices/.vs/StudentServices
 /StudentServices/bin/Debug/net6.0
 /StudentServices/obj
+/StudentServices/.vs/ProjectEvaluation
