--- a/.github/workflows/Dockermain.yml
+++ b/.github/workflows/Dockermain.yml
@@ -9,7 +9,7 @@ on:
 env:
   AZURE_WEBAPP_NAME: EmployeeManagument
   AZURE_WEBAPP_PACKAGE_PATH: "./publishDockerPackage"
-  DOCKER_IMAGE_NAME: 'employeemanagumentimage'
+  DOCKER_IMAGE_NAME: 'dotnet_mvc_repo'
 
 jobs:
   publish:
