--- a/StudentServices/Dockerfile
+++ b/StudentServices/Dockerfile
@@ -8,13 +8,13 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["StudentServices.csproj", "."]
-RUN dotnet restore "./StudentServices.csproj"
+RUN dotnet restore "./StudentServices/StudentServices.csproj"
 COPY . .
 WORKDIR "/src/."
-RUN dotnet build "StudentServices.csproj" -c Release -o /app/build
+RUN dotnet build "./StudentServices/StudentServices.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "StudentServices.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./StudentServices/StudentServices.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
